Finished RoleController API Documentation
